--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -1,22 +1,58 @@
-nav ul {
+.nav-list{
     padding: 0;
     list-style-type: none;
-    flex: 2;
     display: flex;
+    flex-wrap:wrap;
+    gap:20px;
 }
 
-nav li {
-    font-family:  "Roboto";
-    display: inline;
-    text-align: center;
-    flex: 1;
+.nav-item {
+    flex:1;
+    border:1px solid #3f3a3a;
+    border-radius:8px;
+    background-color: #e6e5e5;
     font-size: 20px;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    height:80px;
 }
 
-main, header, nav, article, aside, footer, section {
-    background-color: rgba(191, 191, 192, 0.39);
+.nav-buttons{
+  text-decoration: none;
+  color: black;
+  width: 30px;
+  height: 30px;
+}
+.nav-buttons :hover{
+  transform: scale(1.20);
+}
+.nav-desc{
+  font-family: "Roboto";
+  text-align: center;
+}
+.Marco-Desc{
+  font-family:  "Roboto";
+  margin-left:20%;
+  margin-right: 20%;
 }
 
+header{
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #959cab;
+}
+article, aside, footer, section {
+  background-color: #c7cbd3;
+}
+main{
+  margin:90px;
+}
 .logo{
     width:75px;
     height:75px;
@@ -24,12 +60,7 @@ main, header, nav, article, aside, footer, section {
 
 html {
     margin-top: 40px;
-    background-color: #d0ecf080;
-}
-
-:hover{
-    color: blue;
-    text-decoration: none;
+    background-color: #F2F2F2;
 }
 
 h1{
@@ -58,7 +89,6 @@ h1{
 .Socials-Item{
     width:30px;
     height:30px;
-
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -117,3 +147,41 @@ body {
     transform: scale(1.05); /* Slightly enlarge */
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
   }
+
+.Marco-Skills{
+  font-family: Roboto;
+  margin-left: 20%;
+}
+
+.Skills-List{
+  display:flex;
+  flex-wrap:wrap;
+  list-style-type: none;
+  margin-left:20%;
+  gap:30px;
+}
+
+.Skills-Item{
+    width:40px;
+    height:40px;
+
+    transition: transform 0.1s ease, box-shadow 0.3s ease;
+}
+
+.Skills-Icons{
+    width: 100%;
+    height: 100%;
+}
+
+.skills-Desc {
+  font-family:  "Roboto";
+  text-align: center;
+  margin-top: 12px;
+  font-size: 12px;
+  color: #333;
+}
+
+.Skills-Item:hover {
+  transform: scale(1.20); /* Slightly enlarge */
+}
+  
