--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -1,38 +1,36 @@
+.logo{
+  margin-left: 2%;
+}
+
 .nav-list{
     padding: 0;
     list-style-type: none;
     display: flex;
     flex-wrap:wrap;
     gap:20px;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .nav-item {
     flex:1;
-    border:1px solid #3f3a3a;
-    border-radius:8px;
-    background-color: #e6e5e5;
-    font-size: 20px;
     display: flex;
     align-items:center;
     justify-content: center;
     text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    height:80px;
+    height:50px;
 }
 
-.nav-buttons{
+.nav-link{
   text-decoration: none;
-  color: black;
-  width: 30px;
-  height: 30px;
 }
-.nav-buttons :hover{
-  transform: scale(1.20);
-}
+
 .nav-desc{
+  font-size: 16px;
   font-family: "Roboto";
   text-align: center;
+  text-decoration: none;
+  color:black;
 }
 .Marco-Desc{
   font-family:  "Roboto";
@@ -45,10 +43,11 @@ header{
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #959cab;
+  background-color: #ffffff;
+  border-radius: 10px;
 }
 article, aside, footer, section {
-  background-color: #c7cbd3;
+  background-color: #ffffff;
 }
 main{
   margin:90px;
@@ -59,8 +58,8 @@ main{
 }
 
 html {
-    margin-top: 40px;
-    background-color: #F2F2F2;
+    margin-top: 30px;
+    background-color: #ffffff;
 }
 
 h1{
@@ -118,15 +117,18 @@ body {
   /* Individual project box */
   .Project-Item {
     width: 250px; /* Adjust as needed */
-    border: 1px solid #3f3a3a;
-    border-radius: 8px;
-    background-color: #e6e5e5;
-    padding: 16px;
     text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition: transform 0.3s ease;
   }
   
+  .Project-Title{
+    font-family: Roboto;
+    font-size: 20;
+    background-color: black;
+    color:white;
+    border-radius: 5px;
+  }
+
   /* Image inside the project box */
   .Project-Image {
     width: 100%; /* Full width */
@@ -139,13 +141,11 @@ body {
     font-family:  "Roboto";
     margin-top: 12px;
     font-size: 14px;
-    color: #333;
   }
   
   /* Hover effect for project boxes */
   .Project-Item:hover {
     transform: scale(1.05); /* Slightly enlarge */
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
   }
 
 .Marco-Skills{
