--- a/marcoportfoliov2/src/App.css
+++ b/marcoportfoliov2/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'JetBrains Mono', monospace;
+  scroll-behavior: smooth;
+  color:#FDF4F8;/*move this to correct section later*/
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.portfolio-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
+  width: 100vw;
+  background-color: #1B2631;
+}
+
+.formatting-div {
+  min-width: 450px;
+  max-width: 48vw;
+} 
+
+.header-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;  
+  padding: 0px;
+  flex-direction: row;
+  margin:0px 0px 10vh 0px;
+}
+
+.nav-link-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+  min-width:300px;
+}
+
+.nav-link{
+
+}
+
+.intro-header {
+  font-size: 1.5rem;
+  color:#FDF4F8;
+}
+
+.name-header {
+  font-size: 2.5rem;
+  margin-bottom: 2vh;
+  color:#A5C8D6;
+}
+
+.summary-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-direction: row;
+  margin-bottom: 5vh;
+  flex-basis: 60%;
+}
+
+.profile-paragraph {
+  display: flex;
+  justify-content: flex-start;
+  align-items: left;
+  width:80%;
+  color:#A5C8D6;
+  margin-bottom: 3vh;
+}
+
+.profile-container {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: space-between;
+  flex-direction: column;
+  margin-bottom: 5vh;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.image-container {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  min-width:110px;
+  flex-basis:40%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile-image {
+  border-radius: 50%;
+}
+
+.contact-me-text{
+  color: #FDF4F8;
+  background-color: #A5CBD6;
+  padding:8px 15px;
+  border-radius:5px;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  width: 50%;
+}
+
+.profile-icon{
+  width:30px;
+  height:30px;
+  cursor: pointer;
+}
+
+.project-containers{
+  display: flex;
+  flex-direction: row;
+  align-items: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
+  width:100%;
+  margin-bottom: 5vh;
+}
+
+.project-container{
+  min-width:350px;
+  max-width:350px;
+  margin-bottom: 4vh;
 }
